Ports Docker Dev settings Readme

--- a/HC.LogProxy.Api/appsettings.json
+++ b/HC.LogProxy.Api/appsettings.json
@@ -1,4 +1,6 @@
 {
+  "AllowedHosts": "*",
+  "Urls": "http://0.0.0.0:80",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,9 +8,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
   "LogProxy": {
     "LogServerApiKey": "key46INqjpp7lMzjd",
-    "LogServerUri": "https://api.airtable.com/v0/appD1b1YjWoXkUJwR"
+    "LogServerUri": "https://api.airtable.com"
   }
 }
