Basic auth Swagger basic auth Document unauthorized

--- a/HC.LogProxy.Api/appsettings.json
+++ b/HC.LogProxy.Api/appsettings.json
@@ -10,6 +10,12 @@
   },
   "LogProxy": {
     "LogServerApiKey": "key46INqjpp7lMzjd",
-    "LogServerUri": "https://api.airtable.com"
+    "LogServerUri": "https://api.airtable.com",
+    "Users": [
+      {
+        "Username": "user1",
+        "Password": "password1"
+      }
+    ]
   }
 }
