--- a/HC.LogProxy.Api/HC.LogProxy.Api.csproj
+++ b/HC.LogProxy.Api/HC.LogProxy.Api.csproj
@@ -17,6 +17,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AspNetCore.Authentication.Basic" Version="5.1.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     </ItemGroup>
 
